# vanchor-pcb

./: .gitignore  README.md  docker-compose.yml
boards/helm/: ERC-notes.md  carrier.kicad_sch  control.kicad_sch  fp-lib-table  vanchor-helm-lib.kicad_sym  vanchor-helm.dsn  vanchor-helm.kicad_pcb  vanchor-helm.kicad_pro  vanchor-helm.kicad_sch  vanchor-helm.net  vanchor-helm.ses
boards/thrust-driver/: README.md  driver.kicad_sch  fp-lib-table  sym-lib-table  vanchor-thrust.dsn  vanchor-thrust.kicad_pcb  vanchor-thrust.kicad_pro  vanchor-thrust.kicad_sch  vanchor-thrust.net  vanchor-thrust.ses
bom/: mouser-order.csv
docs/: HANDOFF.md  architecture.md  cost-optimization-log.md  llm-pcb-design.md  thrust-driver-spec.md
docs/research/: autopilot-lessons.md
firmware/helm-pico/: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
firmware/helm-pico/docs/: I2C-TUNNEL.md
firmware/helm-pico/include/: board.h
firmware/helm-pico/src/: config.h  control_logic.h  i2c_tunnel.cpp  i2c_tunnel.h  main.cpp  protocol_ext.h  tunnel_core.h
firmware/helm-pico/tests/: Makefile  test_protocol.cpp
hardware/: ERC-notes.md  carrier.kicad_sch  mcu.kicad_sch  pi.kicad_sch  power.kicad_sch  servo.kicad_sch  sym-lib-table  thrust.kicad_sch  vanchor-helm-lib.kicad_sym  vanchor-helm.dsn  vanchor-helm.kicad_pcb  vanchor-helm.kicad_pro  vanchor-helm.kicad_sch  vanchor-helm.net  vanchor-helm.ses
sim/: README.md  hall_input.cir  hall_tran.csv  is_dc.csv  is_telemetry.cir  plots.gp  reverse_fet.cir  servo_ac.csv  servo_is.cir  vbat_sense.cir  vbat_tran.csv
(+95 files in other folders)
